# coint

./: .gitignore  .windsurfrules  Markets.txt  README.md  README_REPORTS.md  backtest.py  data_loader.py  demo_backtest_reports.py  pair_analysis.py  parquet_structure.py  pyproject.toml  requirements.txt  utils_path.py  visualization.py
backup/: Pairs.txt  backtest (638 сделок первые 10 пар).py  backtest 249 49 секунд.py  backtest_249_best.py  data_loader_backup.py  pair_analysis.py  test_precise.py
core/: cointegration.py  data.py  prices.py  reports.py
demo_reports/: demo_backtest.html  demo_backtest_summary.json
memmap_files/: 1INCHUSDT___BATUSDT.npy  1INCHUSDT___BOBUSDT.npy  1INCHUSDT___BTCBRZ.npy  1INCHUSDT___BUBBLEUSDT.npy  1INCHUSDT___COMPUSDT.npy  1INCHUSDT___ERTHAUSDT.npy  1INCHUSDT___FITFIUSDT.npy  1INCHUSDT___GUMMYUSDT.npy  1INCHUSDT___KARATEUSDT.npy  1INCHUSDT___MANABTC.npy  1INCHUSDT___MCRTUSDT.npy  1INCHUSDT___MEEUSDT.npy  1INCHUSDT___QORPOUSDT.npy  1INCHUSDT___REALUSDT.npy  1INCHUSDT___SAFEUSDT.npy  1INCHUSDT___SANDBTC.npy  1INCHUSDT___SHRAPUSDT.npy  1INCHUSDT___STATUSDT.npy  1INCHUSDT___TNSRUSDT.npy  1INCHUSDT___VELAUSDT.npy  1INCHUSDT___VINUUSDT.npy  1INCHUSDT___WLDEUR.npy  1INCHUSDT___ZKFUSDT.npy  1SOLUSDT___COTUSDT.npy  1SOLUSDT___IRLUSDT.npy  1SOLUSDT___MNTBTC.npy  1SOLUSDT___NLKUSDT.npy  3PUSDT___AEGUSDT.npy  3PUSDT___APEXUSDC.npy  3PUSDT___APTRUSDT.npy  3PUSDT___ELDAUSDT.npy  3PUSDT___ETHDAI.npy  3PUSDT___G3USDT.npy  3PUSDT___GCAKEUSDT.npy  3PUSDT___IRLUSDT.npy  3PUSDT___NEXOUSDT.npy  3PUSDT___NLKUSDT.npy  3PUSDT___ONDOEUR.npy  (+6706 more)
(+18 files in other folders)
